--- a/action.yaml
+++ b/action.yaml
@@ -149,38 +149,17 @@ runs:
         subject-digest: ${{ steps.build-and-push.outputs.digest }}
 
     - if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
-      name: Sign the DockerHub images with GitHub OIDC Token
-      env:
-        DIGEST: ${{ steps.build-and-push.outputs.digest }}
-        TAGS: ${{ steps.docker_meta_dockerhub.outputs.tags }}
-      run: |
-        images=""
-        for tag in ${TAGS}; do
-          echo "[INFO] tag: $tag"
-          images+="${tag}@${DIGEST} "
-          echo "[INFO] images: $images"
-        done
-        echo "[INFO] cosign sign --yes ${images}"
-        cosign sign --yes ${images}
-        echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
-          --certificate-identity=https://github.com/${{ github.workflow_ref }} \
-          ${{ inputs.registry-server }}/${{ inputs.image-repository }}:${{ inputs.image-tag }}"
-        cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
-          --certificate-identity=https://github.com/${{ github.workflow_ref }} \
-          ${{ inputs.registry-server }}/${{ inputs.image-repository }}:${{ inputs.image-tag }}
-      shell: bash
-
-    #- if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
-    #  name: Sign Images
-    #  uses: senzing-factory/github-action-docker-buildx-build/signing@29-skern
-    #  with:
-    #    digest: ${{ steps.build-and-push.outputs.digest }}
-    #    image-tags: ${{ steps.docker_meta_dockerhub.outputs.tags }}
-    #    image-repository: ${{ inputs.image-repository }}
-    #    registry-server: ${{ inputs.registry-server }}
+      name: Sign DockerHub Images
+      uses: senzing-factory/github-action-docker-buildx-build/signing@29-skern
+      with:
+        digest: ${{ steps.build-and-push.outputs.digest }}
+        image-tag: ${{ inputs.image-tag }
+        image-tags: ${{ steps.docker_meta_dockerhub.outputs.tags }}
+        image-repository: ${{ inputs.image-repository }}
+        registry-server: ${{ inputs.registry-server }}
 
     - if: ${{ inputs.sign-image == 'true' && inputs.login-to-ecr == 'true' }}
-      name: Sign Images
+      name: Sign ECR Images
       uses: senzing-factory/github-action-docker-buildx-build/signing@29-skern
       with:
         digest: ${{ steps.build-and-push.outputs.digest }}
