--- a/action.yaml
+++ b/action.yaml
@@ -153,7 +153,7 @@ runs:
       uses: senzing-factory/github-action-docker-buildx-build/signing@29-skern
       with:
         digest: ${{ steps.build-and-push.outputs.digest }}
-        image-tag: ${{ inputs.image-tag }
+        image-tag: ${{ inputs.image-tag }}
         image-tags: ${{ steps.docker_meta_dockerhub.outputs.tags }}
         image-repository: ${{ inputs.image-repository }}
         registry-server: ${{ inputs.registry-server }}
