--- a/action.yaml
+++ b/action.yaml
@@ -19,10 +19,10 @@ inputs:
     description: Docker image tag
   login-to-dockerhub:
     default: true
-    description: Bool, login to Dockerhub
+    description: Login to Dockerhub
   login-to-ecr:
     default: false
-    description: Bool, login to ECR
+    description: Login to ECR
   password:
     description: Access Token for Docker registry
   platforms:
@@ -30,7 +30,7 @@ inputs:
     description: Comma-separated list of docker platforms to build (hint - See output of docker buildx ls)
   push:
     default: false
-    description: Bool, push image to registry
+    description: Push image to registry
   registry-server:
     default: docker.io
     description: Docker registry server
@@ -38,6 +38,9 @@ inputs:
     description: AWS role session name, required for ECR login
   role-to-assume:
     description: AWS role to assume, required for ECR login
+  sign-image:
+    default: false
+    description: Sign and add attestations to the built image (true or false).
   username:
     description: Username for Docker registry
 
@@ -56,8 +59,8 @@ runs:
     - name: set up Docker Buildx
       uses: docker/setup-buildx-action@v3
 
-    - if: ${{ inputs.login-to-dockerhub }}
-      name: dockerhub login
+    - if: ${{ inputs.login-to-dockerhub == 'true' }}
+      name: DockerHub login
       uses: docker/login-action@v3
       with:
         registry: ${{ inputs.registry-server }}
@@ -83,9 +86,9 @@ runs:
       run: |
         CLEANED_TAG=$(echo ${{ inputs.image-tag }} | tr -d "/#" )
         tags=""
-        if ${{ inputs.login-to-ecr }}; then
-          tags="${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.ecr-image-repository }}:$CLEANED_TAG,"
-          tags="${tags}${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.ecr-image-repository }}:latest,"
+        if ${{ inputs.login-to-ecr == 'true' }}; then
+          tags="${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}:$CLEANED_TAG,"
+          tags="${tags}${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}:latest,"
         fi
         tags="${tags}${{ inputs.registry-server }}/${{ inputs.image-repository }}:$CLEANED_TAG,"
         tags="${tags}${{ inputs.registry-server }}/${{ inputs.image-repository }}:latest"
@@ -93,14 +96,74 @@ runs:
         echo "TAGS=${tags}" >> "$GITHUB_ENV"
       shell: bash
 
-    - name: Build and push
+    - id: docker_meta_dockerhub
+      if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
+      uses: docker/metadata-action@v5.6.1
+      with:
+        images: ${{ inputs.registry-server }}/${{ inputs.image-repository }}
+        tags: |
+          type=semver,pattern={{version}}
+          type=sha,format=long
+
+    - id: docker_meta_ecr
+      if: ${{ inputs.sign-image == 'true' && inputs.login-to-ecr == 'true' }}
+      uses: docker/metadata-action@v5.6.1
+      with:
+        images: ${{ steps.login-ecr-public.outputs.registry }}/${{ inputs.image-repository }}
+        tags: |
+          type=semver,pattern={{version}}
+          type=sha,format=long
+
+    - id: build-and-push
+      name: Build and push
       uses: docker/build-push-action@v6
       with:
+        annotations: ${{ steps.docker_meta_dockerhub.outputs.annotations }}
         build-args: ${{ inputs.build-options }}
         context: ${{ inputs.context }}
         platforms: ${{ inputs.platforms }}
+        provenance: mode=max
         push: ${{ inputs.push }}
+        sbom: true
         tags: ${{ env.TAGS }}
+
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
+      name: Generate DockerHub Attestations
+      uses: senzing-factory/github-action-docker-buildx-build/attestations@29-skern
+      with:
+        artifact-name-prefix: dockerhub
+        image-repository: ${{ inputs.image-repository }}
+        registry-server: ${{ inputs.registry-server }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-ecr == 'true' }}
+      name: Generate ECR Attestations
+      uses: senzing-factory/github-action-docker-buildx-build/attestations@29-skern
+      with:
+        artifact-name-prefix: ecr
+        image-repository: ${{ inputs.image-repository }}
+        registry-server: ${{ steps.login-ecr-public.outputs.registry }}
+        subject-digest: ${{ steps.build-and-push.outputs.digest }}
+
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-dockerhub == 'true' }}
+      name: Sign DockerHub Images
+      uses: senzing-factory/github-action-docker-buildx-build/signing@29-skern
+      with:
+        digest: ${{ steps.build-and-push.outputs.digest }}
+        image-tag: ${{ inputs.image-tag }}
+        image-tags: ${{ steps.docker_meta_dockerhub.outputs.tags }}
+        image-repository: ${{ inputs.image-repository }}
+        registry-server: ${{ inputs.registry-server }}
+
+    - if: ${{ inputs.sign-image == 'true' && inputs.login-to-ecr == 'true' }}
+      name: Sign ECR Images
+      uses: senzing-factory/github-action-docker-buildx-build/signing@29-skern
+      with:
+        digest: ${{ steps.build-and-push.outputs.digest }}
+        image-tag: ${{ inputs.image-tag }}
+        image-tags: ${{ steps.docker_meta_ecr.outputs.tags }}
+        image-repository: ${{ inputs.image-repository }}
+        registry-server: ${{ steps.login-ecr-public.outputs.registry }}
 
 branding:
   icon: upload-cloud
