--- a/.github/workflows/make-latest-tag.yaml
+++ b/.github/workflows/make-latest-tag.yaml
@@ -5,21 +5,22 @@ on:
     tags:
       - "[0-9]+.[0-9]+.[0-9]+"
 
-permissions:
-  contents: write
+permissions: {}
 
 jobs:
   make-go-tag:
     name: make a latest tag
     outputs:
       status: ${{ job.status }}
+    permissions:
+      contents: write
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
         with:
-          fetch-depth: "0"
+          persist-credentials: false
 
       - name: run latest-tag
         uses: EndBug/latest-tag@v1.6.2
