--- a/signing/action.yaml
+++ b/signing/action.yaml
@@ -27,15 +27,22 @@ runs:
       uses: sigstore/cosign-installer@v3
 
     - name: Sign the DockerHub images with GitHub OIDC Token
+      env:
+        IMAGE_TAGS: ${{ inputs.image-tags }}
+        IMAGE_DIGEST: ${{ inputs.digest }}
+        IMAGE_TAG: ${{ inputs.image-tag }}
+        IMAGE_REPOSITORY: ${{ inputs.image-repository }}
+        REGISTRY_SERVER: ${{ inputs.registry-server }}
+        WORKFLOW_REF: ${{ github.workflow_ref }}
       run: |
         set -x
         images=""
-        echo "[INFO] image tags: ${{ inputs.image-tags }}"
+        echo "[INFO] image tags: $IMAGE_TAGS"
         while IFS= read -r line || [[ -n $line ]]; do
           echo "[INFO] line: $line"
-          images+="${line}@${{ inputs.digest }} "
+          images+="${line}@${IMAGE_DIGEST} "
           echo "[INFO] images: $images"
-        done < <(printf '%s' "${{ inputs.image-tags }}")
+        done < <(printf '%s' "$IMAGE_TAGS")
 
         echo "[INFO] images final: $images"
 
@@ -43,9 +50,9 @@ runs:
         cosign sign --yes ${images}
 
         echo "[INFO] cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
-          --certificate-identity=https://github.com/${{ github.workflow_ref }} \
-          ${{ inputs.registry-server }}/${{ inputs.image-repository }}:${{ inputs.image-tag }}"
+          --certificate-identity=https://github.com/${WORKFLOW_REF} \
+          ${REGISTRY_SERVER}/${IMAGE_REPOSITORY}:${IMAGE_TAG}"
         cosign verify --certificate-oidc-issuer=https://token.actions.githubusercontent.com \
-          --certificate-identity=https://github.com/${{ github.workflow_ref }} \
-          ${{ inputs.registry-server }}/${{ inputs.image-repository }}:${{ inputs.image-tag }}
+          --certificate-identity=https://github.com/${WORKFLOW_REF} \
+          "${REGISTRY_SERVER}/${IMAGE_REPOSITORY}:${IMAGE_TAG}"
       shell: bash
